fix(client): set touch action to none on sortable item to avoid dragging problem on mobile devices

--- a/www/styles/globals.css
+++ b/www/styles/globals.css
@@ -205,3 +205,6 @@ button[role="combobox"][aria-invalid="true"] {
 button[role="combobox"][aria-invalid="true"] {
   @apply text-destructive;
 }
+*[aria-roledescription="sortable"] {
+  touch-action: none;
+}
